test/vm/errors/mod_by_zero.ach
// Expected error: modulo by zero
1 % 0
